se agrega seccion de afiliacio a los datos de ejemplo